--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   JWT_SECRET: TOPSECRET
+  DATABASE_URL: postgresql://vincentpalomo:v2_3ysed_nbsdWVz5vhCJymkwPH3dqmN@db.bit.io:5432/vincentpalomo/fitness-dev?ssl=true
 
 jobs:
   Jest:
